--- a/environment.yml
+++ b/environment.yml
@@ -4,7 +4,7 @@ channels:
   - bioconda
   - defaults
 dependencies:
-  - blast
-  - biopython
-  - python >=3
-  - pandas
+  - blast >=2.9
+  - biopython >=1.79
+  - python >=3.6,<4.0
+  - pandas >=1.4.2
