--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -46,6 +46,9 @@ jobs:
           github-token: ${{ secrets.github_token }}
           flag-name: run-${{ matrix.test_number }}
           path-to-lcov: "coverage.lcov"
+      
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v3
 
   finish:
     needs: tests
