--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "dnaapler"
-version = "0.0.12" # change VERSION too
+version = "0.1.0" # change VERSION too
 description = "Reorients assembled microbial sequences"
 authors = ["George Bouras <george.bouras@adelaide.edu.au>"]
 license = "MIT"
@@ -27,8 +27,8 @@ pyrodigal = ">=2.0.0"
 
 [tool.poetry.dev-dependencies]
 black = ">=22.3.0"
-pytest = "^6.2.5"
-pytest-cov = "^3.0.0"
+pytest = ">=6.2.5"
+pytest-cov = ">=3.0.0"
 
 [[tool.poetry.source]]
 name = "pypi-test"
