--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,8 +27,10 @@ pyrodigal = ">=2.0.0"
 
 [tool.poetry.dev-dependencies]
 black = ">=22.3.0"
+isort = ">=5.10.1"
 pytest = ">=6.2.5"
 pytest-cov = ">=3.0.0"
+flake8 = ">=4.0.1"
 
 [[tool.poetry.source]]
 name = "pypi-test"
