--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -14,12 +14,13 @@ jobs:
       - uses: actions/checkout@v2
       - uses: conda-incubator/setup-miniconda@v2
         with:
-          python-version: 3.10
+          python-version: 3.9
+          activate-environment: dnaapler
+          environment-file: build/environment.yaml
+          auto-activate-base: false
           miniforge-variant: Mambaforge
           channels: conda-forge,bioconda,defaults
           channel-priority: strict
-          activate-environment: dnaapler
-          environment-file: build/environment.yaml
           auto-update-conda: true
       - name: Install project
         shell: bash -l {0}
