cosmetic changes with docs [skip ci]

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,6 +16,7 @@ nav:
     - RUNNING:
       - Install: install.md
       - Usage: run.md
+      - Examples: example.md
     - OUTPUT:
       - Output: output.md
 
