--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -26,7 +26,11 @@ jobs:
         shell: bash -l {0}
         run: |
           python -m pip install -U pip
-          just install
+          pip install -e .
+          pip install black
+          pip install isort
+          pip install pytest
+          pip install pytest-cov
       - name: Build a binary wheel and a source tarball
         shell: bash -l {0}
         run: just build
